--- a/function.html
+++ b/function.html
@@ -13,25 +13,34 @@
     function add(a, b){
         return a + b;
     }
+    let x = add(10, 5);
+    document.getElementById("bca").innerHTML = x;
+    
     function sub(a, b){
         return a - b;
     }
-    function mult(a, b){
-        return a * b;
-    }
-    function devi(a, b){
-        return a / b;
-    }
-    let x = add(10, 5);
-    document.getElementById("bca").innerHTML = x;
-
     let y = sub(10, 5);
     document.getElementById("bca").innerHTML = y;
 
+    function mult(a, b){
+        return a * b;
+    }
     let z = mult(10, 5);
-    document.getElementById("bca").innerHTML = z;
+     document.getElementById("bca").innerHTML = z;
+
+    function devi(a, b){
+        return a / b;
+    }
+    // let x = add(10, 5);
+    // document.getElementById("bca").innerHTML = x;
+
+    // let y = sub(10, 5);
+    // document.getElementById("bca").innerHTML = y;
+
+    // let z = mult(10, 5);
+    // document.getElementById("bca").innerHTML = z;
     
-    let w = devi(10, 5);
+    let w = divi(10, 5);
     document.getElementById("bca").innerHTML = w;
 </script>
 </html>
