--- a/function.html
+++ b/function.html
@@ -13,20 +13,20 @@
     function add(a, b){
         return a + b;
     }
-    let x = add(10, 5);
-    document.getElementById("bca").innerHTML = x;
+    let x = add(5, 5);
+    document.getElementById("bca").innerHTML = x;"<br>"
     
     function sub(a, b){
         return a - b;
     }
     let y = sub(10, 5);
-    document.getElementById("bca").innerHTML = y;
+    document.getElementById("bca").innerHTML = y;"<br>"
 
     function mult(a, b){
         return a * b;
     }
-    let z = mult(10, 5);
-     document.getElementById("bca").innerHTML = z;
+    let z = mult(10, 8);
+     document.getElementById("bca").innerHTML = z;"<br>"
 
     function devi(a, b){
         return a / b;
