--- a/function.html
+++ b/function.html
@@ -16,20 +16,20 @@
     let x = add(5, 5);
     document.getElementById("bca").innerHTML = x;"<br>"
     
-    function sub(a, b){
-        return a - b;
+    function sub(a1, b1){
+        return a1 - b1;
     }
     let y = sub(10, 5);
     document.getElementById("bca").innerHTML = y;"<br>"
 
-    function mult(a, b){
-        return a * b;
+    function mult(a2, b2){
+        return a2 * b2;
     }
     let z = mult(10, 8);
      document.getElementById("bca").innerHTML = z;"<br>"
 
-    function devi(a, b){
-        return a / b;
+    function divi(a3, b3){
+        return a3 / b3;
     }
     // let x = add(10, 5);
     // document.getElementById("bca").innerHTML = x;
